--- a/main.html
+++ b/main.html
@@ -3,11 +3,44 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      defer
+    ></script>
     <link rel="stylesheet" href="style.css" />
     <title>E-Quiz</title>
   </head>
   <body>
     <header>
+      <!-- Button to Show Toast -->
+      <button class="btn btn-primary" id="showToastBtn">Welcome Text</button>
+
+      <!-- Toast Component -->
+      <div class="toast-container position-fixed top-0 end-0 p-3">
+        <div
+          id="myToast"
+          class="toast"
+          role="alert"
+          aria-live="assertive"
+          aria-atomic="true"
+        >
+          <div class="toast-header">
+            <strong class="me-auto">Welcome Guest</strong>
+            <small>Just now</small>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="toast"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="toast-body">Earn Points and raise your rank</div>
+        </div>
+      </div>
       <div id="heading">
         <section>
           <h1 id="greet">Hi Chetan</h1>
@@ -95,5 +128,4 @@
     <footer></footer>
     <script src="script.js"></script>
   </body>
-  <script src="script.js"></script>
 </html>
