implemented the use of jquery

--- a/main.html
+++ b/main.html
@@ -43,7 +43,7 @@
       </div>
       <div id="heading">
         <section>
-          <h1 id="greet">Hi Chetan</h1>
+          <h1 id="greet"></h1>
           <!-- Change the name using javascript, get info from login-->
           <h5>Let's make this day productive</h5>
         </section>
@@ -61,8 +61,8 @@
         <section>
           <section id="points_image"></section>
           <section>
-            <h5>Points</h5>
-            <h4 id="display_points">1209</h4>
+            <h5 class="Change">Points</h5>
+            <h4 id="display_points" class="Change">1209</h4>
           </section>
         </section>
       </div>
